# GeoCompROS

./: README.md
functional_mapping_helper/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml
functional_mapping_helper/include/functional_mapping_helper/Exceptions/: FMGeneralException.hpp
functional_mapping_helper/include/functional_mapping_helper/GeometricalConstructs/: Axis_Angle.hpp  BasicDefinitions.hpp  GeometricalComputations.hpp  Line.hpp  LineSegment.hpp  Plane.hpp  Point.hpp  PointOfIntersection.hpp  Polygon.hpp  Pose.hpp  Quaternion.hpp  Ray.hpp  RotationMatrix.hpp  Vector.hpp  pnpoly.hpp
functional_mapping_helper/include/functional_mapping_helper/HelperClasses/: Std2DFloatVector.hpp  StringHelper.hpp
functional_mapping_helper/include/functional_mapping_helper/MathematicalConstructs/: LinearEquationSystem2D.hpp  Matrix2X2.h
functional_mapping_helper/include/functional_mapping_helper/Visualization/: VisualizationOctave.hpp
functional_mapping_helper/src/Exceptions/: FMGeneralException.cpp
functional_mapping_helper/src/GeometricalConstructs/: Axis_Angle.cpp  BasicDefinitions.cpp  GeometricalComputations.cpp  Line.cpp  LineSegment.cpp  Plane.cpp  Point.cpp  PointOfIntersection.cpp  Polygon.cpp  Pose.cpp  Quaternion.cpp  Ray.cpp  RotationMatrix.cpp  Vector.cpp  pnpoly.cpp
functional_mapping_helper/src/HelperClasses/: Std2DFloatVector.cpp  StringHelper.cpp
functional_mapping_helper/src/MathematicalConstructs/: LinearEquationSystem2D.cpp  Matrix2X2.cpp
functional_mapping_helper/src/Visualization/: VisualizationOctave.cpp
